--- a/Readme
+++ b/Readme
@@ -188,3 +188,14 @@ SELECT * FROM table1 LEFT OUTER JOIN table2 ON table1.id = table2.id;
 Combines rows from left table and matched rows from the right table.
 
 I’ve been practicing various SQL queries and regularly updating my sheet with new commands and syntax. This sheet reflects my ongoing learning and will serve as a reference for future work.
+
+I hope you’re doing well.
+
+I wanted to request a change in my WFH schedule for this week. I have a train to catch at 4:00 PM on Friday, and one of my practical exams is scheduled on Monday. Therefore, I kindly request to work from home on Friday and Monday instead of Wednesday, just for this week.
+
+I will ensure that all my tasks and responsibilities are managed efficiently during the WFH days.
+
+Looking forward to your approval.
+
+Best regards,
+[Your Name]
