--- a/Readme
+++ b/Readme
@@ -222,6 +222,8 @@ The sheet includes the module availability across both regions, along with total
 
 Let me know if any changes are required or if further details are needed.
 
+I performed end-to-end testing from request creation to decision on the UAT platform and will continue practicing it to avoid confusion and ensure smooth execution.
+
 Best regards,
 [Your Name]
 Metric
